--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-    background: linear-gradient(90deg, #4682b4, #1e3c72);
+    background-color: #4B84B3;
     color: white;
     padding: 3rem 2rem;
     text-align: center;
